# efficient_net

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  common.mk  efficientnet_lite.c  efficientnet_lite.h  efficientnet_lite4.c  efficientnet_lite4.h  gaptest.yml  run_meas.sh  sdk.config
common/: model_decl.mk
models/: nntool_script  nntool_script_hwc  nntool_script_ne16  nntool_script_q  nntool_script_q_hwc  nntool_script_q_ne16  test_nntool.py
